--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,5 @@
 /target/
-.idea/compiler.xml
-.idea/encodings.xml
-.idea/inspectionProfiles/
-.idea/kotlinc.xml
-.idea/libraries/
-.idea/misc.xml
-.idea/modules.xml
-.idea/workspace.xml
+.idea/
 client/client.iml
 netty-server.iml
 nio-data.txt
@@ -15,3 +8,5 @@ nio/pom.xml
 nio/src/test/
 nio/target/
 server/server.iml
+client/target/
+server/target/
