--- a/nio/pom.xml
+++ b/nio/pom.xml
@@ -31,5 +31,10 @@
       <version>RELEASE</version>
       <scope>compile</scope>
     </dependency>
+      <dependency>
+          <groupId>com.google.guava</groupId>
+          <artifactId>guava</artifactId>
+          <version>21.0</version>
+      </dependency>
   </dependencies>
 </project>
