--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,7 @@
         <module>server</module>
         <module>client</module>
         <module>nio</module>
+        <module>concurrent</module>
     </modules>
 
     <dependencies>
