自定义阻塞线程池

--- a/concurrent/pom.xml
+++ b/concurrent/pom.xml
@@ -12,5 +12,12 @@
     <groupId>com.yqc</groupId>
     <artifactId>concurrent</artifactId>
 
+    <dependencies>
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+            <version>21.0</version>
+        </dependency>
+    </dependencies>
 
 </project>
